# fragment_shaders

./: .gitignore  README.md
fourcharge/: bufferA.glsl
fragrunner/: TODO.md  pyproject.toml
fragrunner/fragrunner/: __main__.py  default_vert.glsl
generator/: __main__.py  main.glsl
mandelbrot/: bufferA.glsl  bufferB.glsl  common.glsl  image.glsl
mandelbrot/psychedelic/: bufferA.glsl  bufferB.glsl
mod_int_patterns/: bufferA.glsl
newton_fractal/: common.glsl  image.glsl
newton_fractal/old_full/: common.glsl  image.glsl
newton_fractal/simplified/: common.glsl
point_reflection/: image.glsl
reaction_diffusion/: bufferA.glsl  bufferD.glsl  common.glsl  image.glsl
sdf_sandbox/: image.glsl
sdf_view/: image.glsl
shaders/: bezier.glsl  brokenbezierweird.glsl  cmn.glsl  countourmap.glsl  fakehyperobj.glsl  julia.glsl  moirethanadream.glsl  voromoire.glsl  voronoibanding.glsl  whatthefrequency.glsl
shaders/basicIFS/: README.md  bufA.glsl  common.glsl  main.glsl
shaders/fourcharge/: bufferA.glsl  common.glsl
shaders/hopfy/: image.glsl
shaders/ifs_dream/: image.glsl
shaders/mandelbrot/: bufferB.glsl  image.glsl
shaders/mandelbulb/: image.glsl
shaders/massage_verse/: image.glsl  image.html
shaders/mod_int_patterns/: bufferA.glsl  bufferB.glsl  common.glsl  image.glsl
shaders/moirre_patterns/: image.glsl
shaders/newton_fractal/: filters.glsl  image.glsl
shaders/nnet/: bufferA.glsl  common.glsl  math.glsl  (+3 more)
sobel_video/: bufferC.glsl
suesque_reduced/: bufferA.glsl  common.glsl
suesque_sandbox/: bufferA.glsl
voronoi/: image.glsl
(+56 files in other folders)
