[tool.poetry]
name = "fragrunner"
version = "0.1.0"
description = ""
authors = ["Grayson Miller <grayson.miller124@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
moderngl = "^5.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
